--- a/modal.html
+++ b/modal.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="base.css">
-	<link rel="stylesheet" type="text/css" href="default.css">
-	<link rel="stylesheet" type="text/css" href="guide.css">
+	<title>Modal | myComponent</title>
+	<link rel="stylesheet" type="text/css" href="style/base.css">
+	<link rel="stylesheet" type="text/css" href="style/guide.css">
+	<link rel="stylesheet" type="text/css" href="style/default_layout.css">
+	<link rel="stylesheet" type="text/css" href="style/default_component.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 </head>
 <body>
 	
+<h1 class="guide_h1">Modal</h1>
+<p class="guide_p"></p>
 
-<h3>레이어팝업</h3>
-<a href="#modal" class="modal_link">팝업</a>
-<div id="modal" class="modal_body">
-	<div class="modal_bg"></div><!-- 뒷 배경 존재시, 클릭 하면 닫기 -->
-	<div class="modal_content">
-		내용	
-	</div>
-</div>
+
 <script type="text/javascript">
-	$.fn.myDescript = function( _option ){
+	$.fn.myModal = function( _option ){
 		return this.each( function(){
 			var $this = $( this )
 			var $target = $( $this.attr('href') )
 			var isOn = false;
 			var events;
+			
 			var option = $.extend({
 				activeEvent: 'click'
 			}, _option)
@@ -63,8 +60,34 @@
 			}
 		})
 	}
+</script>
 
-	$('#descript_link1').myDescript({
+
+<h2 class="guide_h2">Option</h2>
+<div class="guide_option">
+</div>
+
+
+<h2 class="guide_h2">Use</h2>
+<div class="guide_option">
+</div>
+
+
+<h2 class="guide_h2">Test</h2>
+<div class="guide_test">
+
+	<a href="#modal" class="modal_link">팝업</a>
+	<div id="modal" class="modal_body">
+		<div class="modal_bg"></div><!-- 뒷 배경 존재시, 클릭 하면 닫기 -->
+		<div class="modal_content">
+			내용	
+		</div>
+	</div>
+
+</div>
+
+<script type="text/javascript">
+	$('#tooltip_link1').myTooltip({
 		activeEvent: 'click',
 		installCallback: function() {
 			console.log( 'test' )
@@ -73,10 +96,10 @@
 			console.log( 'test' )
 		}
 	})
-	$('#descript_link2').myDescript({
+	$('#tooltip_link2').myTooltip({
 		activeEvent: ['mouseover', 'click', 'focus']
 	})
-	$('#descript_link3').myDescript({
+	$('#tooltip_link3').myTooltip({
 		activeEvent: 'mouseover, click, focus'
 	})
 </script>
