--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>myComponent</title>
+	<link rel="stylesheet" type="text/css" href="style/base.css">
+	<link rel="stylesheet" type="text/css" href="style/default_layout.css">
+	<link rel="stylesheet" type="text/css" href="style/default_component.css">
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
+	<!-- guide -->
+	<link rel="stylesheet" type="text/css" href="guide/style.css">
+	<script src="guide/script.js"></script>
 </head>
 <body>
 	
+<div class="guide_wrap">
+	<div class="guide_lnb">
+		<ul>
+			<li><a href="#test"></a></li>
+		</ul>
+	</div>
+
+	<div class="guide_body">
+		<iframe src="" frameborder="0"></iframe>
+	</div>
+</div>
+
 </body>
 </html>
