--- a/style.html
+++ b/style.html
@@ -4,94 +4,92 @@
 	<meta charset="UTF-8">
 	<title>Style | myComponent</title>
 	<link rel="stylesheet" type="text/css" href="style/base.css">
-	<link rel="stylesheet" type="text/css" href="style/guide.css">
 	<link rel="stylesheet" type="text/css" href="style/default_layout.css">
 	<link rel="stylesheet" type="text/css" href="style/default_component.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
+	<!-- guide -->
+	<link rel="stylesheet" type="text/css" href="guide/style.css">
+	<script src="guide/script.js"></script>
 </head>
 <body>
 
-<h1 class="guide_h1">Slide</h1>
-<p class="guide_p"></p>
+<div class="guide_wrap">
+	<h1 class="guide_h1">Style</h1>
+	<p class="guide_p"></p>
 
-<h2>버튼</h2>
-<ul>
-	<li>- 컬러별: .btn_blue / .btn_red / .btn_green / .btn_lightgray / .btn_gray / .btn_darkgray</li>
-	<li>- 크기별: .btn_small / .btn_middle / .btn_large</li>
-	<li>- 형태별: .btn_outline / .btn_round / .btn_circle / .btn_block</li>
-</ul>
+	<h2 class="guide_h2">버튼</h2>
+	<ul>
+		<li>- 컬러별: .btn_blue / .btn_red / .btn_green / .btn_lightgray / .btn_gray / .btn_darkgray</li>
+		<li>- 크기별: .btn_small / .btn_middle / .btn_large</li>
+		<li>- 형태별: .btn_outline / .btn_round / .btn_circle / .btn_block</li>
+	</ul>
 
-<h2>테스트</h2>
-<a href="" class="btn">버튼 기본</a>
-<button type="button" class="btn">버튼 기본</button>
+	<h3 class="guide_h3">Test</h3>
+	<div class="guide_test">
+		<a href="" class="btn">버튼 기본</a>
+		<button type="button" class="btn">버튼 기본</button>
 
-<a href="" class="btn">버튼 기본</a>
-<button type="button" class="btn">기본</button>
+		<a href="" class="btn">버튼 기본</a>
+		<button type="button" class="btn">기본</button>
 
-<a href="" class="btn btn_blue">파란</a>
-<a href="" class="btn btn_blue" disabled>파란</a>
-<button type="button" class="btn btn_blue">파란</button>
-<button type="button" class="btn btn_blue" disabled>파란</button>
+		<a href="" class="btn btn_blue">파란</a>
+		<a href="" class="btn btn_blue" disabled>파란</a>
+		<button type="button" class="btn btn_blue">파란</button>
+		<button type="button" class="btn btn_blue" disabled>파란</button>
 
-<a href="" class="btn btn_green">그린</a>
-<a href="" class="btn btn_green" disabled>그린</a>
-<button type="button" class="btn btn_green">그린</button>
-<button type="button" class="btn btn_green" disabled>그린</button>
+		<a href="" class="btn btn_green">그린</a>
+		<a href="" class="btn btn_green" disabled>그린</a>
+		<button type="button" class="btn btn_green">그린</button>
+		<button type="button" class="btn btn_green" disabled>그린</button>
 
-<a href="" class="btn btn_red">파란</a>
-<a href="" class="btn btn_red" disabled>파란</a>
-<button type="button" class="btn btn_red">빨간</button>
-<button type="button" class="btn btn_red" disabled>빨간</button>
+		<a href="" class="btn btn_red">파란</a>
+		<a href="" class="btn btn_red" disabled>파란</a>
+		<button type="button" class="btn btn_red">빨간</button>
+		<button type="button" class="btn btn_red" disabled>빨간</button>
 
-<a href="" class="btn btn_lightgray">회색1</a>
-<a href="" class="btn btn_lightgray" disabled>회색1</a>
-<button type="button" class="btn btn_lightgray">회색1</button>
-<button type="button" class="btn btn_lightgray" disabled>회색1</button>
+		<a href="" class="btn btn_lightgray">회색1</a>
+		<a href="" class="btn btn_lightgray" disabled>회색1</a>
+		<button type="button" class="btn btn_lightgray">회색1</button>
+		<button type="button" class="btn btn_lightgray" disabled>회색1</button>
 
-<a href="" class="btn btn_gray">회색2</a>
-<a href="" class="btn btn_gray" disabled>회색2</a>
-<button type="button" class="btn btn_gray">회색2</button>
-<button type="button" class="btn btn_gray" disabled>회색2</button>
+		<a href="" class="btn btn_gray">회색2</a>
+		<a href="" class="btn btn_gray" disabled>회색2</a>
+		<button type="button" class="btn btn_gray">회색2</button>
+		<button type="button" class="btn btn_gray" disabled>회색2</button>
 
-<a href="" class="btn btn_darkgray">회색3</a>
-<a href="" class="btn btn_darkgray" disabled>회색3</a>
-<button type="button" class="btn btn_darkgray">회색3</button>
-<button type="button" class="btn btn_darkgray" disabled>회색3</button>
-
-
-<h3>- 크기별</h3>
-<button type="button" class="btn btn_small">작은</button>
-<button type="button" class="btn btn_middle">중간(기본)</button>
-<button type="button" class="btn btn_large">큰</button>
+		<a href="" class="btn btn_darkgray">회색3</a>
+		<a href="" class="btn btn_darkgray" disabled>회색3</a>
+		<button type="button" class="btn btn_darkgray">회색3</button>
+		<button type="button" class="btn btn_darkgray" disabled>회색3</button>
 
 
-<h3>- 형태</h3>
-<button type="button" class="btn btn_outline">아웃라인</button>
-<button type="button" class="btn btn_outline btn_blue">아웃라인</button>
-<button type="button" class="btn btn_outline btn_green">아웃라인</button>
-<button type="button" class="btn btn_outline btn_red">아웃라인</button>
-<button type="button" class="btn btn_outline btn_lightgray">아웃라인</button>
-<button type="button" class="btn btn_outline btn_gray">아웃라인</button>
-<button type="button" class="btn btn_outline btn_darkgray">아웃라인</button>
-<button type="button" class="btn btn_round">라운딩</button>
-<button type="button" class="btn btn_circle">원</button>
-<button type="button" class="btn btn_block">블록</button>
+		<button type="button" class="btn btn_small">작은</button>
+		<button type="button" class="btn btn_middle">중간(기본)</button>
+		<button type="button" class="btn btn_large">큰</button>
 
 
+		<button type="button" class="btn btn_outline">아웃라인</button>
+		<button type="button" class="btn btn_outline btn_blue">아웃라인</button>
+		<button type="button" class="btn btn_outline btn_green">아웃라인</button>
+		<button type="button" class="btn btn_outline btn_red">아웃라인</button>
+		<button type="button" class="btn btn_outline btn_lightgray">아웃라인</button>
+		<button type="button" class="btn btn_outline btn_gray">아웃라인</button>
+		<button type="button" class="btn btn_outline btn_darkgray">아웃라인</button>
+		<button type="button" class="btn btn_round">라운딩</button>
+		<button type="button" class="btn btn_circle">원</button>
+		<button type="button" class="btn btn_block">블록</button>
+	</div>
 
-<hr>
+	<h3 class="guide_h3">아이콘</h3>
+	<div class="guide_test">
+		<span class="icon">아이콘</span>
+	</div>
 
-
-<h2>아이콘</h2>
-<span class="icon">아이콘</span>
-
-
-
-<hr>
-
-
-<h2>나누기</h2>
-
+	<h3 class="guide_h3">나누기</h3>
+	<div class="guide_test">
+	</div>
+</div>
 	
 </body>
 </html>
