--- a/tooltip.html
+++ b/tooltip.html
@@ -4,113 +4,118 @@
 	<meta charset="UTF-8">
 	<title>Tooltip | myComponent</title>
 	<link rel="stylesheet" type="text/css" href="style/base.css">
-	<link rel="stylesheet" type="text/css" href="style/guide.css">
 	<link rel="stylesheet" type="text/css" href="style/default_layout.css">
 	<link rel="stylesheet" type="text/css" href="style/default_component.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
+	<!-- guide -->
+	<link rel="stylesheet" type="text/css" href="guide/style.css">
+	<script src="guide/script.js"></script>
 </head>
 <body>
 
-<h1 class="guide_h1">Tooltip</h1>
-<p class="guide_p"></p>
+<div class="guide_wrap">
+	<h1 class="guide_h1">Tooltip</h1>
+	<p class="guide_p"></p>
 
 
-<script type="text/javascript">
-	/*
-	 * option
-	 */
-	$.fn.myTooltip = function( _option ){
-		return this.each( function(){
-			var $this = $( this )
-			var $target = $( $this.attr('href') )
-			var isOn = false;
-			var events;
-			
-			var option = $.extend({
-				activeEvent: 'click'
-			}, _option)
-			
-			// $target 없으면 종료
-			if ( $target.length == 0 ) {
-				console.warn('No target!')
-				return
-			}
+	<script type="text/javascript">
+		/*
+		 * option
+		 */
+		$.fn.myTooltip = function( _option ){
+			return this.each( function(){
+				var $this = $( this )
+				var $target = $( $this.attr('href') )
+				var isOn = false;
+				var events;
+				
+				var option = $.extend({
+					activeEvent: 'click'
+				}, _option)
+				
+				// $target 없으면 종료
+				if ( $target.length == 0 ) {
+					console.warn('No target!')
+					return
+				}
 
-			if (typeof(option.activeEvent) == 'string') {
-				events = option.activeEvent.split(',')
-			} else {
-				events = option.activeEvent
-			}
+				if (typeof(option.activeEvent) == 'string') {
+					events = option.activeEvent.split(',')
+				} else {
+					events = option.activeEvent
+				}
 
-			for (var i = events.length-1; i >= 0; i--) {
-				$this.on(events[i], function( e ){
-					if (e.type == 'click') {
-						e.preventDefault()
-					}
+				for (var i = events.length-1; i >= 0; i--) {
+					$this.on(events[i], function( e ){
+						if (e.type == 'click') {
+							e.preventDefault()
+						}
 
-					$target.toggle()
+						$target.toggle()
 
-					// 액션 종료 후 콜백
-					if (typeof(option.eventCallback) == 'function') {
-						option.eventCallback( e )
-					}
-				})
-			}
+						// 액션 종료 후 콜백
+						if (typeof(option.eventCallback) == 'function') {
+							option.eventCallback( e )
+						}
+					})
+				}
 
-			// 설치 후 콜백
-			if (typeof(option.installCallback) == 'function') {
-				option.installCallback()
+				// 설치 후 콜백
+				if (typeof(option.installCallback) == 'function') {
+					option.installCallback()
+				}
+			})
+		}
+	</script>
+
+
+	<h2 class="guide_h2">Option</h2>
+	<div class="guide_option">
+	</div>
+
+
+	<h2 class="guide_h2">Use</h2>
+	<div class="guide_option">
+	</div>
+
+
+	<h2 class="guide_h2">Test</h2>
+	<div class="guide_test">
+
+		<a href="#tooltip1" id="tooltip_link1" class="tooltip_link">설명문</a>
+		<div id="tooltip1" class="tooltip_body">
+			설명문1
+		</div>
+		<a href="#tooltip2" id="tooltip_link2" class="tooltip_link">설명문</a>
+		<div id="tooltip2" class="tooltip_body">
+			설명문2
+		</div>
+		<a href="#tooltip3" id="tooltip_link3" class="tooltip_link">설명문</a>
+		<div id="tooltip3" class="tooltip_body">
+			설명문3
+		</div>
+
+	</div>
+
+	<script type="text/javascript">
+		$('#tooltip_link1').myTooltip({
+			activeEvent: 'click',
+			installCallback: function() {
+				console.log( 'test' )
+			},
+			eventCallback: function( e ) {
+				console.log( 'test' )
 			}
 		})
-	}
-</script>
-
-
-<h2 class="guide_h2">Option</h2>
-<div class="guide_option">
+		$('#tooltip_link2').myTooltip({
+			activeEvent: ['mouseover', 'click', 'focus']
+		})
+		$('#tooltip_link3').myTooltip({
+			activeEvent: 'mouseover, click, focus'
+		})
+	</script>
 </div>
-
-
-<h2 class="guide_h2">Use</h2>
-<div class="guide_option">
-</div>
-
-
-<h2 class="guide_h2">Test</h2>
-<div class="guide_test">
-
-	<a href="#tooltip1" id="tooltip_link1" class="tooltip_link">설명문</a>
-	<div id="tooltip1" class="tooltip_body">
-		설명문1
-	</div>
-	<a href="#tooltip2" id="tooltip_link2" class="tooltip_link">설명문</a>
-	<div id="tooltip2" class="tooltip_body">
-		설명문2
-	</div>
-	<a href="#tooltip3" id="tooltip_link3" class="tooltip_link">설명문</a>
-	<div id="tooltip3" class="tooltip_body">
-		설명문3
-	</div>
-
-</div>
-
-<script type="text/javascript">
-	$('#tooltip_link1').myTooltip({
-		activeEvent: 'click',
-		installCallback: function() {
-			console.log( 'test' )
-		},
-		eventCallback: function( e ) {
-			console.log( 'test' )
-		}
-	})
-	$('#tooltip_link2').myTooltip({
-		activeEvent: ['mouseover', 'click', 'focus']
-	})
-	$('#tooltip_link3').myTooltip({
-		activeEvent: 'mouseover, click, focus'
-	})
-</script>
 
 </body>
 </html>
