placeholder 기능 및 guide 일부 스타일

--- a/index.html
+++ b/index.html
@@ -14,15 +14,25 @@
 </head>
 <body>
 	
-<div class="guide_wrap">
+<div class="guide_view">
 	<div class="guide_lnb">
 		<ul>
-			<li><a href="#test"></a></li>
+			<li><a href="style.html">style</a></li>
+			<li><a href="modal.html">modal</a></li>
+			<li><a href="placeholder.html">placeholder</a></li>
+			<li><a href="input_normalize.html">input normalize</a></li>
+			<li><a href="tooltip.html">tooltip</a></li>
+			<li><a href="tab.html">tab</a></li>
+		</ul>
+		<ul>
+			<li><a href="full_layout.html" target="_blank">full layout</a></li>
+			<li><a href="gnb.html" target="_blank">gnb</a></li>
+			<li><a href="quick.html" target="_blank">quick</a></li>
 		</ul>
 	</div>
 
 	<div class="guide_body">
-		<iframe src="" frameborder="0"></iframe>
+		<iframe src="" frameborder="0" class="guide_window"></iframe>
 	</div>
 </div>
 
